--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -1,39 +1,43 @@
-name: Terraform Full Deploy
+name: Terraform Manual Deploy
 
 on:
   workflow_dispatch:
     inputs:
       tfvars_file:
-        description: 'Nombre del archivo .tfvars que quieres usar'
+        description: "Nombre del archivo .tfvars (debe estar en infra/)"
         required: true
-        default: 'terraform.tfvars'
+        default: "terraform.tfvars"
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout código
-      uses: actions/checkout@v4
+      - name: Checkout código
+        uses: actions/checkout@v4
 
-    - name: Configurar Azure CLI
-      uses: azure/login@v2
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Login en Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Inicializar Terraform
-      working-directory: infra
-      run: terraform init
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: "1.6.6"
 
-    - name: Validar Terraform
-      working-directory: infra
-      run: terraform validate
+      - name: Inicializar Terraform
+        working-directory: infra
+        run: terraform init
 
-    - name: Planear infraestructura
-      working-directory: infra
-      run: terraform plan -var-file=${{ github.event.inputs.tfvars_file }}
+      - name: Validar configuración
+        working-directory: infra
+        run: terraform validate
 
-    - name: Aplicar cambios
-      working-directory: infra
-      run: terraform apply -auto-approve -var-file=${{ github.event.inputs.tfvars_file }}
+      - name: Plan de Terraform
+        working-directory: infra
+        run: terraform plan -var-file=${{ github.event.inputs.tfvars_file }}
 
+      - name: Aplicar cambios
+        working-directory: infra
+        run: terraform apply -auto-approve -var-file=${{ github.event.inputs.tfvars_file }}
