--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -38,3 +38,9 @@ jobs:
             -Dsonar.sources=PianoRisePython \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=$SONAR_TOKEN
+            
+      - name: Wait for SonarCloud Quality Gate
+        uses: SonarSource/sonarcloud-quality-gate-action@v1.1.0
+        timeout-minutes: 5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
