--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -35,6 +35,11 @@ jobs:
           jq -s '.' snyk-results/*.json > snyk-output.json
           snyk-to-html -i snyk-output.json -o snyk-report.html
 
+          # Debug: List files in the directory and confirm report generation
+          ls -l PianoRisePython
+          ls -l PianoRisePython/snyk-results
+          ls -l PianoRisePython/snyk-report.html
+
       - name: Upload Snyk HTML Report as Artifact
         uses: actions/upload-artifact@v4
         with:
