--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -28,9 +28,10 @@ jobs:
           cd PianoRisePython
           mkdir -p snyk-results
 
-          snyk code test app --json > snyk-results/app.json || echo '{}' > snyk-results/app.json
-          snyk code test static --json > snyk-results/static.json || echo '{}' > snyk-results/static.json
-          snyk code test templates --json > snyk-results/templates.json || echo '{}' > snyk-results/templates.json
+          snyk code test PianoRisePython/app --json > snyk-results/app.json || echo '{}' > snyk-results/app.json
+          snyk code test PianoRisePython/static --json > snyk-results/static.json || echo '{}' > snyk-results/static.json
+          snyk code test PianoRisePython/templates --json > snyk-results/templates.json || echo '{}' > snyk-results/templates.json
+
 
           jq -s '.' snyk-results/*.json > snyk-output.json
           snyk-to-html -i snyk-output.json -o snyk-report.html
