Artefactos de diagramas v1

--- a/.github/workflows/diagramas.yaml
+++ b/.github/workflows/diagramas.yaml
@@ -16,11 +16,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Setup Bash Environment
+    - name: Setup Environment
       run: |
         sudo apt-get update
-        sudo apt-get install -y graphviz python3-pip
-        pip install pyan3==1.1.1  # Instalar la versión específica de pyan3
+        sudo apt-get install -y graphviz python3-pip doxygen
+        pip install pyan3==1.1.1
+        pip install pydeps
+        pip install pylint  # Incluye pyreverse
 
     - name: Run Bash Script for Class Diagrams
       run: |
@@ -41,8 +43,31 @@ jobs:
         $dotContent | Set-Content -Path "callgraph.dot" -Encoding ASCII
         dot -Tsvg callgraph.dot -o callgraph.svg
 
+    - name: Generate Import Dependency Graph
+      run: |
+        cd PianoRisePython
+        pydeps app --noshow -T svg -o import_graph.svg --rmprefix app.
+
     - name: Upload callgraph.svg as Artifact
       uses: actions/upload-artifact@v4
       with:
         name: callgraph-svg
         path: callgraph.svg
+
+    - name: Upload import_graph.svg as Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: import-graph-svg
+        path: PianoRisePython/import_graph.svg
+
+    - name: Upload class_diagram.png as Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: class-diagram
+        path: PianoRisePython/diagrams/class_diagram.png
+
+    - name: Upload Doxygen HTML Docs
+      uses: actions/upload-artifact@v4
+      with:
+        name: doxygen-html
+        path: PianoRisePython/docs/html/
